--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "^2.5.4",
+    "ng-mocks": "^7.8.0",
     "ngx-bootstrap": "^4.1.1",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
