--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "moment": "^2.24.0",
     "ng-mocks": "^7.8.0",
     "ngx-bootstrap": "^4.1.1",
     "ngx-cookie-service": "^2.1.0",
