--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
     "lib": [
       "es2018",
       "dom"
+    ],
+    "exclude": [
+      "typings/browser.d.ts",
+      "typings/browser",
+      "node_modules",
+      "**/*.spec.ts"
     ]
   }
 }
