--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.0.0",
-    "@angular/cli": "^8.0.2",
     "@angular/common": "^8.0.0",
     "@angular/compiler": "^8.0.0",
-    "@angular/compiler-cli": "^8.0.0",
     "@angular/core": "^8.0.0",
     "@angular/forms": "^8.0.0",
     "@angular/platform-browser": "^8.0.0",
@@ -43,8 +41,11 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/language-service": "^8.0.0",
+    "@angular-devkit/build-angular": "0.800.0",
+    "@angular/cli": "8.0.0",
+    "@angular/compiler-cli": "8.0.0",
+    "@angular/language-service": "8.0.0",
+    "@angular/platform-server": "8.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
