--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.9",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
     "ng-mocks": "^7.8.0",
