--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,6 @@
   "exclude": [
     "typings/browser.d.ts",
     "typings/browser",
-    "node_modules",
-    "**/*.spec.ts"
+    "node_modules"
   ]
 }
