--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
+    "heroku-postbuild": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.0",
     "@angular/common": "^8.2.0",
     "@angular/compiler": "^8.2.0",
+    "@angular/compiler-cli": "8.2.0",
     "@angular/core": "^8.2.0",
     "@angular/forms": "^8.2.0",
     "@angular/platform-browser": "^8.2.0",
@@ -44,7 +45,6 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "0.802.0",
     "@angular/cli": "8.2.0",
-    "@angular/compiler-cli": "8.2.0",
     "@angular/language-service": "8.2.0",
     "@angular/platform-server": "8.2.0",
     "@types/jasmine": "~2.8.8",
