--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0"
+    "tslint": "~5.11.0",
+    "tslint-angular": "^3.0.2"
   },
   "engines": {
     "node": "10.15.3",
