--- a/package.json
+++ b/package.json
@@ -14,22 +14,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.11",
+    "@angular/animations": "^8.2.13",
     "@angular/cli": "8.3.9",
-    "@angular/common": "^8.2.11",
-    "@angular/compiler": "^8.2.11",
+    "@angular/common": "^8.2.13",
+    "@angular/compiler": "^8.2.13",
     "@angular/compiler-cli": "8.2.11",
-    "@angular/core": "^8.2.11",
-    "@angular/forms": "^8.2.11",
-    "@angular/platform-browser": "^8.2.11",
-    "@angular/platform-browser-dynamic": "^8.2.11",
-    "@angular/router": "^8.2.11",
-    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
+    "@angular/core": "^8.2.13",
+    "@angular/forms": "^8.2.13",
+    "@angular/platform-browser": "^8.2.13",
+    "@angular/platform-browser-dynamic": "^8.2.13",
+    "@angular/router": "^8.2.13",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.3.1",
-    "core-js": "^2.6.9",
+    "core-js": "^2.6.10",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
@@ -46,14 +46,14 @@
     "@angular/language-service": "8.2.11",
     "@angular/platform-server": "8.2.11",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
