--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "sitemap.xml"
+              "src/sitemap.xml"
             ],
             "styles": [
               "src/styles.scss",
