--- a/package.json
+++ b/package.json
@@ -14,51 +14,52 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.13",
-    "@angular/cli": "8.3.18",
-    "@angular/common": "^8.2.13",
-    "@angular/compiler": "^8.2.13",
-    "@angular/compiler-cli": "8.2.13",
-    "@angular/core": "^8.2.13",
-    "@angular/forms": "^8.2.13",
-    "@angular/platform-browser": "^8.2.13",
-    "@angular/platform-browser-dynamic": "^8.2.13",
-    "@angular/router": "^8.2.13",
-    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
-    "@ngx-translate/core": "^11.0.1",
+    "@angular/animations": "^9.0.4",
+    "@angular/cli": "9.0.4",
+    "@angular/common": "^9.0.4",
+    "@angular/compiler": "^9.0.4",
+    "@angular/compiler-cli": "9.0.4",
+    "@angular/core": "^9.0.4",
+    "@angular/forms": "^9.0.4",
+    "@angular/localize": "^9.0.4",
+    "@angular/platform-browser": "^9.0.4",
+    "@angular/platform-browser-dynamic": "^9.0.4",
+    "@angular/router": "^9.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "angular-font-awesome": "^3.1.2",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.6.10",
+    "bootstrap": "^4.4.1",
+    "core-js": "^3.6.4",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
-    "ng-mocks": "^7.8.0",
-    "ngx-bootstrap": "^4.3.0",
-    "ngx-cookie-service": "^2.2.0",
+    "ng-mocks": "^9.0.0",
+    "ngx-bootstrap": "^5.5.0",
+    "ngx-cookie-service": "^2.4.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
-    "typescript": "~3.5.3",
-    "zone.js": "~0.9.1"
+    "typescript": "~3.6.4",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.18",
-    "@angular/language-service": "8.2.13",
-    "@angular/platform-server": "8.2.13",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "~0.900.4",
+    "@angular/language-service": "9.0.4",
+    "@angular/platform-server": "9.0.4",
+    "@types/jasmine": "~3.5.7",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.1.0",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "~5.4.3",
+    "ts-node": "~8.6.2",
+    "tslint": "~6.0.0",
     "tslint-angular": "^3.0.2"
   },
   "engines": {
