--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,11 +4,11 @@
     "outDir": "../out-tsc/app",
     "types": []
   },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts",
-    "**/*.matcher.ts",
-    "**/*.matchers.ts",
-    "**/*.mock*.ts"
+  "files": [
+    "main.ts",
+    "polyfills.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
   ]
 }
