--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
-    "test": "ng test",
-    "test-headless": "ng test --browsers=ChromeHeadless",
+    "test": "jest",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build --aot --prod"
@@ -15,10 +14,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.0.4",
-    "@angular/cli": "9.0.4",
     "@angular/common": "^9.0.4",
     "@angular/compiler": "^9.0.4",
-    "@angular/compiler-cli": "9.0.4",
     "@angular/core": "^9.0.4",
     "@angular/forms": "^9.0.4",
     "@angular/localize": "^9.0.4",
@@ -30,37 +27,38 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.4.1",
+    "builder-pattern": "^1.2.4",
     "core-js": "^3.6.4",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
-    "ng-mocks": "^9.0.0",
     "ngx-bootstrap": "^5.5.0",
     "ngx-cookie-service": "^2.4.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
-    "typescript": "~3.6.4",
     "zone.js": "~0.10.2"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "./src/setup-jest.ts"
+    ]
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.4",
+    "@angular/cli": "9.0.4",
+    "@angular/compiler-cli": "9.0.4",
     "@angular/language-service": "9.0.4",
-    "@angular/platform-server": "9.0.4",
-    "@types/jasmine": "~3.5.7",
-    "@types/jasminewd2": "^2.0.8",
+    "@types/jest": "^25.1.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "~3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
-    "protractor": "~5.4.3",
+    "jest": "^24.9.0",
+    "jest-preset-angular": "^8.0.0",
+    "ng-mocks": "^9.0.0",
+    "protractor": "^5.4.3",
     "ts-node": "~8.6.2",
     "tslint": "~6.0.0",
-    "tslint-angular": "^3.0.2"
+    "typescript": "~3.6.4"
   },
   "engines": {
     "node": "10.15.3",
