--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node server.js",
     "build": "ng build",
     "test": "jest",
+    "test-with-coverage": "jest --collect-coverage",
+    "test-watch": "jest --watch",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build --aot --prod"
@@ -55,6 +57,7 @@
     "jest": "^24.9.0",
     "jest-preset-angular": "^8.0.0",
     "ng-mocks": "^9.0.0",
+    "prettier": "^2.0.1",
     "protractor": "^5.4.3",
     "ts-node": "~8.6.2",
     "tslint": "~6.0.0",
