--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^5.5.0",
-    "ngx-cookie-service": "^3.0.3",
+    "ngx-localstorage": "^3.1.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
