--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "protractor": "^5.4.3",
     "ts-node": "~8.8.1",
     "tslint": "~6.1.0",
+    "tslint-angular": "^3.0.2",
     "typescript": "~3.8.3"
   },
   "engines": {
