--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
       "global": {
         "branches": 65,
         "functions": 65,
-        "lines": 77,
-        "statements": 80
+        "lines": 75,
+        "statements": 75
       }
     },
     "preset": "jest-preset-angular",
@@ -61,7 +61,7 @@
     ]
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.0",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular/cli": "9.1.6",
     "@angular/compiler-cli": "9.1.9",
     "@angular/language-service": "9.1.9",
