--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.4.1",
     "builder-pattern": "^1.2.4",
+    "compression": "^1.7.4",
     "core-js": "^3.6.4",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
