--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "core-js": "^3.6.4",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "moment": "^2.24.0",
     "ngx-bootstrap": "^5.5.0",
     "ngx-localstorage": "^3.1.0",
+    "popper.js": "^1.16.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
@@ -75,7 +77,7 @@
     "prettier": "^2.0.2",
     "protractor": "^7.0.0",
     "ts-node": "~8.8.1",
-    "tslint": "~6.1.0",
+    "tslint": "^5.16.0",
     "tslint-angular": "^3.0.2",
     "typescript": "~3.8.3"
   },
