--- a/package.json
+++ b/package.json
@@ -9,43 +9,42 @@
     "test": "jest",
     "test-with-coverage": "jest --collect-coverage",
     "test-watch": "jest --watch",
-    "lint": "ng lint",
+    "lint": "tsc --noEmit && eslint . --ext ts,json --quiet --fix",
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.0",
-    "@angular/common": "^9.1.9",
-    "@angular/compiler": "^9.1.9",
-    "@angular/core": "^9.1.9",
-    "@angular/forms": "^9.1.9",
-    "@angular/localize": "^9.1.9",
-    "@angular/platform-browser": "^9.1.9",
-    "@angular/platform-browser-dynamic": "^9.1.9",
-    "@angular/router": "^9.1.9",
+    "@angular/animations": "^10.0.1",
+    "@angular/common": "^10.0.1",
+    "@angular/compiler": "^10.0.1",
+    "@angular/core": "^10.0.1",
+    "@angular/forms": "^10.0.1",
+    "@angular/localize": "^10.0.1",
+    "@angular/platform-browser": "^10.0.1",
+    "@angular/platform-browser-dynamic": "^10.0.1",
+    "@angular/router": "^10.0.1",
     "@fortawesome/angular-fontawesome": "^0.6.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-regular-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
-    "@ngx-translate/core": "^12.1.2",
-    "@ngx-translate/http-loader": "^4.0.0",
-    "angular-font-awesome": "^3.1.2",
-    "bootstrap": "^4.4.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-brands-svg-icons": "^5.13.1",
+    "@fortawesome/free-regular-svg-icons": "^5.13.1",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
+    "bootstrap": "^4.5.0",
     "builder-pattern": "^1.2.4",
     "compression": "^1.7.4",
-    "core-js": "^3.6.4",
+    "core-js": "^3.6.5",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
-    "moment": "^2.24.0",
-    "ngx-bootstrap": "^5.5.0",
+    "moment": "^2.27.0",
+    "ngx-bootstrap": "^5.6.1",
     "ngx-localstorage": "^3.1.0",
     "popper.js": "^1.16.0",
-    "rxjs": "^6.5.4",
-    "tslib": "^1.11.1",
+    "rxjs": "^6.5.5",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "jest": {
@@ -64,25 +63,27 @@
     ]
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.7",
-    "@angular/cli": "9.1.6",
-    "@angular/compiler-cli": "9.1.9",
-    "@angular/language-service": "9.1.9",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.5",
-    "codelyzer": "^5.2.2",
-    "jest": "^25.2.3",
-    "jest-preset-angular": "^8.1.2",
-    "ng-mocks": "^9.1.0",
-    "prettier": "^2.0.2",
-    "protractor": "^7.0.0",
-    "ts-node": "~8.8.1",
-    "tslint": "^5.16.0",
-    "tslint-angular": "^3.0.2",
-    "typescript": "~3.8.3"
+    "@angular-devkit/build-angular": "^0.1000.0",
+    "@angular/cli": "10.0.0",
+    "@angular/compiler-cli": "10.0.1",
+    "@angular/language-service": "10.0.1",
+    "@types/jest": "^26.0.3",
+    "@types/node": "^14.0.14",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "eslint": "^7.3.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.1.0",
+    "jest-preset-angular": "^8.2.1",
+    "ng-mocks": "^10.0.0-alpha.7",
+    "prettier": "^2.0.5",
+    "prettier-eslint": "^11.0.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.10.2",
+    "typescript": "~3.9.5"
   },
   "engines": {
-    "node": "10.15.3",
-    "npm": "6.9.0"
+    "node": "14.4.0",
+    "npm": "6.14.5"
   }
 }
