--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "./tsconfig.base.json",
   "module": "commonjs",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
