--- a/package.json
+++ b/package.json
@@ -15,37 +15,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.1",
-    "@angular/common": "^10.0.1",
-    "@angular/compiler": "^10.0.1",
-    "@angular/core": "^10.0.1",
-    "@angular/forms": "^10.0.1",
-    "@angular/localize": "^10.0.1",
-    "@angular/platform-browser": "^10.0.1",
-    "@angular/platform-browser-dynamic": "^10.0.1",
-    "@angular/router": "^10.0.1",
-    "@fortawesome/angular-fontawesome": "^0.6.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
-    "@fortawesome/free-brands-svg-icons": "^5.13.1",
-    "@fortawesome/free-regular-svg-icons": "^5.13.1",
-    "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
-    "@ngx-translate/core": "^13.0.0",
-    "@ngx-translate/http-loader": "^6.0.0",
-    "bootstrap": "^4.5.0",
-    "builder-pattern": "^1.2.4",
-    "compression": "^1.7.4",
-    "core-js": "^3.6.5",
-    "express": "^4.17.1",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.5.1",
-    "moment": "^2.27.0",
-    "ngx-bootstrap": "^5.6.1",
-    "ngx-localstorage": "^3.1.0",
-    "popper.js": "^1.16.0",
-    "rxjs": "^6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "@angular/animations": "~10.0.2",
+    "@angular/common": "~10.0.2",
+    "@angular/compiler": "~10.0.2",
+    "@angular/compiler-cli": "~10.0.2",
+    "@angular/core": "~10.0.2",
+    "@angular/forms": "~10.0.2",
+    "@angular/localize": "~10.0.2",
+    "@angular/platform-browser": "~10.0.2",
+    "@angular/platform-browser-dynamic": "~10.0.2",
+    "@angular/router": "~10.0.2",
+    "@fortawesome/angular-fontawesome": "~0.7.0",
+    "@fortawesome/fontawesome-svg-core": "~1.2.29",
+    "@fortawesome/free-brands-svg-icons": "~5.13.1",
+    "@fortawesome/free-regular-svg-icons": "~5.13.1",
+    "@fortawesome/free-solid-svg-icons": "~5.13.1",
+    "@ng-bootstrap/ng-bootstrap": "~6.2.0",
+    "@ngx-translate/core": "~13.0.0",
+    "@ngx-translate/http-loader": "~6.0.0",
+    "bootstrap": "~4.5.0",
+    "builder-pattern": "~1.2.4",
+    "compression": "~1.7.4",
+    "core-js": "~3.6.5",
+    "express": "~4.17.1",
+    "font-awesome": "~4.7.0",
+    "jquery": "~3.5.1",
+    "moment": "~2.27.0",
+    "ngx-bootstrap": "~5.6.1",
+    "ngx-localstorage": "~3.1.0",
+    "rxjs": "~6.6.0",
+    "tslib": "~2.0.0"
   },
   "jest": {
     "collectCoverage": true,
@@ -63,27 +62,27 @@
     ]
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.0",
-    "@angular/cli": "10.0.0",
-    "@angular/compiler-cli": "10.0.1",
-    "@angular/language-service": "10.0.1",
-    "@types/jest": "^26.0.3",
-    "@types/node": "^14.0.14",
-    "@typescript-eslint/eslint-plugin": "^3.5.0",
-    "eslint": "^7.3.1",
+    "@angular-devkit/build-angular": "^0.1000.1",
+    "@angular/cli": "^10.0.1",
+    "@angular/language-service": "^10.0.2",
+    "@types/jest": "^26.0.4",
+    "@types/node": "^14.0.20",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.1.0",
     "jest-preset-angular": "^8.2.1",
-    "ng-mocks": "^10.0.0-alpha.7",
+    "ng-mocks": "^10.0.0",
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.10.2",
-    "typescript": "~3.9.5"
+    "protractor": "^7.0.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.6",
+    "zone.js": "^0.10.3"
   },
   "engines": {
-    "node": "14.4.0",
-    "npm": "6.14.5"
+    "node": "14.5.0",
+    "npm": "6.14.6"
   }
 }
