--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "express": "~4.17.1",
     "font-awesome": "~4.7.0",
     "jquery": "~3.5.1",
+    "lozad": "^1.15.0",
     "moment": "~2.27.0",
-    "ngx-bootstrap": "~5.6.1",
     "ngx-localstorage": "~3.1.0",
     "rxjs": "~6.6.0",
     "tslib": "~2.0.0"
