--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "core-js": "~3.6.5",
     "express": "~4.17.1",
     "font-awesome": "~4.7.0",
+    "heroku-ssl-redirect": "^0.1.1",
     "jquery": "~3.5.1",
     "moment": "~2.27.0",
     "ng-lazyload-image": "^8.0.1",
