--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/localize": "~10.0.3",
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
+    "hamburgers": "^1.1.3",
     "@angular/router": "~10.0.3",
     "@fortawesome/angular-fontawesome": "~0.7.0",
     "@fortawesome/fontawesome-svg-core": "~1.2.29",
@@ -57,13 +58,13 @@
     ]
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.1",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "^10.0.1",
     "@angular/language-service": "^10.0.3",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.20",
-    "@typescript-eslint/parser": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
