--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.3",
-    "@angular/common": "~10.0.3",
-    "@angular/compiler": "~10.0.3",
-    "@angular/compiler-cli": "~10.0.3",
-    "@angular/core": "~10.0.3",
-    "@angular/forms": "~10.0.3",
-    "@angular/localize": "~10.0.3",
-    "@angular/platform-browser": "~10.0.3",
-    "@angular/platform-browser-dynamic": "~10.0.3",
+    "@angular/animations": "~11.0.0",
+    "@angular/common": "~11.0.0",
+    "@angular/compiler": "~11.0.0",
+    "@angular/compiler-cli": "~11.0.0",
+    "@angular/core": "~11.0.0",
+    "@angular/forms": "~11.0.0",
+    "@angular/localize": "~11.0.0",
+    "@angular/platform-browser": "~11.0.0",
+    "@angular/platform-browser-dynamic": "~11.0.0",
     "hamburgers": "^1.1.3",
-    "@angular/router": "~10.0.3",
+    "@angular/router": "~11.0.0",
     "@fortawesome/angular-fontawesome": "~0.7.0",
     "@fortawesome/fontawesome-svg-core": "~1.2.29",
     "@ng-bootstrap/ng-bootstrap": "~8.0.0",
@@ -40,7 +40,7 @@
     "ng-lazyload-image": "^8.0.1",
     "ngx-localstorage": "~3.1.0",
     "rxjs": "~6.6.0",
-    "tslib": "~2.0.0"
+    "tslib": "^2.0.0"
   },
   "jest": {
     "collectCoverage": true,
@@ -58,9 +58,9 @@
     ]
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.0",
-    "@angular/cli": "^10.0.1",
-    "@angular/language-service": "^10.0.3",
+    "@angular-devkit/build-angular": "^0.1100.1",
+    "@angular/cli": "^11.0.1",
+    "@angular/language-service": "^11.0.0",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.20",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
@@ -72,7 +72,7 @@
     "jest-preset-angular": "^8.2.1",
     "ng-mocks": "^10.0.0",
     "prettier": "^2.0.5",
-    "typescript": "^3.9.6",
+    "typescript": "^4.0.5",
     "zone.js": "^0.10.3"
   },
   "engines": {
