--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@angular/localize": "~11.0.0",
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
-    "hamburgers": "^1.1.3",
     "@angular/router": "~11.0.0",
     "@fortawesome/angular-fontawesome": "~0.7.0",
     "@fortawesome/fontawesome-svg-core": "~1.2.29",
@@ -34,7 +33,9 @@
     "core-js": "~3.6.5",
     "express": "~4.17.1",
     "font-awesome": "~4.7.0",
+    "hamburgers": "^1.1.3",
     "heroku-ssl-redirect": "^0.1.1",
+    "hover.css": "^2.3.2",
     "jquery": "~3.5.1",
     "moment": "~2.27.0",
     "ng-lazyload-image": "^8.0.1",
