--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
     "jest-preset-angular": "^8.3.2",
     "ng-mocks": "^11.5.0",
     "prettier": "^2.2.1",
