--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.2",
-    "@angular/common": "~11.1.2",
-    "@angular/compiler": "~11.1.2",
-    "@angular/compiler-cli": "~11.1.2",
-    "@angular/core": "~11.1.2",
-    "@angular/forms": "~11.1.2",
-    "@angular/localize": "~11.1.2",
-    "@angular/platform-browser": "~11.1.2",
-    "@angular/platform-browser-dynamic": "~11.1.2",
-    "@angular/router": "~11.1.2",
-    "@fortawesome/angular-fontawesome": "~0.8.2",
-    "@fortawesome/fontawesome-svg-core": "~1.2.29",
-    "@ng-bootstrap/ng-bootstrap": "~9.0.2",
-    "bootstrap": "~4.6.0",
-    "builder-pattern": "~1.2.4",
-    "core-js": "~3.8.3",
-    "font-awesome": "~4.7.0",
-    "hamburgers": "^1.1.3",
-    "hover.css": "^2.3.2",
-    "jquery": "~3.5.1",
-    "moment": "~2.29.1",
-    "ng-lazyload-image": "^9.1.0",
-    "rxjs": "~6.6.3"
+    "@angular/animations": "^11",
+    "@angular/common": "^11",
+    "@angular/compiler": "^11",
+    "@angular/compiler-cli": "^11",
+    "@angular/core": "^11",
+    "@angular/forms": "^11",
+    "@angular/localize": "^11",
+    "@angular/platform-browser": "^11",
+    "@angular/platform-browser-dynamic": "^11",
+    "@angular/router": "^11",
+    "@fortawesome/angular-fontawesome": "~0.8",
+    "@fortawesome/fontawesome-svg-core": "~1.2",
+    "@ng-bootstrap/ng-bootstrap": "~9.0",
+    "bootstrap": "~4.6",
+    "builder-pattern": "~1.2",
+    "core-js": "^3",
+    "font-awesome": "~4.7",
+    "hamburgers": "^1",
+    "hover.css": "^2",
+    "jquery": "^3",
+    "moment": "~2.29",
+    "ng-lazyload-image": "^9",
+    "rxjs": "~6.6"
   },
   "jest": {
     "collectCoverage": true,
@@ -53,26 +53,26 @@
     ]
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1101.4",
-    "@angular/cli": "^11.1.4",
-    "@angular/language-service": "^11.1.2",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.25",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "jest": "^26.6.3",
-    "jest-cli": "^26.6.3",
-    "jest-preset-angular": "^8.3.2",
-    "ng-mocks": "^11.5.0",
-    "prettier": "^2.2.1",
-    "typescript": "^4.1.4",
-    "zone.js": "^0.11.3"
+    "@angular-devkit/build-angular": "^0",
+    "@angular/cli": "^11",
+    "@angular/language-service": "^11",
+    "@types/jest": "^26",
+    "@types/node": "^14",
+    "@typescript-eslint/eslint-plugin": "^4",
+    "@typescript-eslint/parser": "^4",
+    "eslint": "^7",
+    "eslint-config-prettier": "^8",
+    "eslint-plugin-prettier": "^3",
+    "jest": "^26",
+    "jest-cli": "^26",
+    "jest-preset-angular": "^8",
+    "ng-mocks": "^11",
+    "prettier": "^2",
+    "typescript": "^4",
+    "zone.js": "^0"
   },
   "engines": {
-    "node": "15.6.0",
-    "npm": "7.5.2"
+    "node": "14.16.0",
+    "npm": "7.6.0"
   }
 }
